# kuBig2025

./: .gitignore  .prettierrc  CMakeLists.txt  I2c_rgb_led  README.md  a21_cPython_import.py  code  compare  compare2  compare2.c  environment.yml  gittest.c  hard_tone_buzzer  i2c_rgb_led  i2c_rgb_led2  i2c_rgb_led_swtich  infinit.c  interupt  makefile  tone_buzzer.c
c_example/part2/: CMakeLists.txt  absolute  absolute.c  ascii  ascii.c  average2022temp  average2022temp.c  average2temp  baseball  baseball.c  baseball2  baseball2.c  big  bigtest  bigtest.c  dice  dice.c  findMax  findMax.c  findValueinArray  findValueinArray.c  functionSum  functionSum.c  funtionSum  grade  grade.c  grade2  grade2.c  leePYear  leePYear.c  makefile  multiTable  multiTable.c  one2TenDoWhile  one2TenDoWhile.c  one2tensum  one2tensum.c  one2tenwhile  one2tenwhile.c  onetoTen  (+30 more)
c_example/part3/: CMakeLists.txt  arrayAssignment  arrayAssignment.c  arrayCompare  arrayCompare.c  arrayPointer  arrayPointer.c  bubble  bubble.c  charAdress  charAdress.c  charPointerOperation  charPointerOperation.c  dynamicAllocation  dynamicAllocation.c  endian  endian.c  enumExample  enumExample.c  fflushEx  fflushEx.c  fileDescriptor  fileDescriptor.c  filePointer  filePointer.c  fuctionPointer  fuctionPointer.c  getSeries  getSeries.c  helloStr  helloStr.c  macroex  macroex.c  makefile  pointConcept  pointConcept.c  pointer2  pointer2.c  putSeries  putSeries.c  (+17 more)
c_example/part3/CarSerial/: CMakeLists.txt  main.c  makefile  serial  serial.c  serial.h
c_example/part3/MyRandom/: CMakeLists.txt  makefile  (+1 more)
opencv/part1/: 01_helloworld.cpp  02_basicOp.cpp  03_matOp.cpp  04_inputArray.cpp  05_matOp.cpp  05_matOp2.cpp  06_matOp.cpp  07_vectorScarlar.cpp  08_video.cpp  09_videoSave.cpp  CMakeLists.txt
(+534 files in other folders)
